[project]
name = "comfyui-loopnode"
description = "Custom node that provides loop (for-loop) functionality in ComfyUI."
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = []
keywords = ["comfyui", "loop", "control-flow"]
authors = [
  { name = "t22m003", email = "t22m003@example.com" } 
]
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm", 
    "Environment :: GPU :: Apple Metal",
]

[project.urls]
Repository = "https://github.com/t22m003/ComfyUI_LoopNode"
#  Used by Comfy Registry https://registry.comfy.org
# Documentation = "https://github.com/t22m003/ComfyUI_LoopNode/wiki" 
# Bug Tracker = "https://github.com/t22m003/ComfyUI_LoopNode/issues"

[tool.comfy]
PublisherId = "t22m003"
DisplayName = "Loop Node"
Icon = "" 

